samples/websockets/.generated/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tornado
    service: tornado
  name: tornado
spec:
  ports:
    - name: http
      port: 8888
  selector:
    app: tornado
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tornado
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tornado
      version: v1
  template:
    metadata:
      labels:
        app: tornado
        version: v1
    spec:
      containers:
        - image: docker.io/hiroakis/tornado-websocket-example
          imagePullPolicy: IfNotPresent
          name: tornado
          ports:
            - containerPort: 8888
